--- a/site-plan.html
+++ b/site-plan.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Temple Inn & Suites Site Plan</title>
+  <link rel="stylesheet" href="css/site-plan.css">
 </head>
 
 <body>
@@ -62,7 +63,7 @@
     <h3>Site Map</h3>
     <p>Coming soon ...</p>
     <h3>Wireframes</h3>
-    <p>Coming soon ...</p>
+    <p><img src= "images/wireframe-large-templeinn&suites.png" alt="Temple Inn Large Wireframe" /></p>
   </main>
   <footer>Nayade De La Cruz | BYU-Idaho | WDD 130 - Web Fundamentals</footer>
 </body>
