--- a/site-plan.html
+++ b/site-plan.html
@@ -43,10 +43,14 @@
     <h3>Typography</h3>
     <h4>Heading Font: Epilogue</h4>
     <p>Elegant font for heading <br>
-        https://fonts.googleapis.com/css2?family=Epilogue:wght@300&family=Noto+Sans&display=swap</p>
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@300&display=swap');
+        </style></p>
     <h4>Paragraph Font: Hind Siliguri</h4>
     <p>Elegant font for paragraphs<br>
-        https://fonts.googleapis.com/css2?family=Epilogue:wght@300&family=Hind+Siliguri:wght@300&family=Noto+Sans&display=swap</p>
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
+        </style></p>
     <h4>Normal paragraph example</h4>
     <p>We offer a complete package for whatever your needs are in relation to temple service and accomodations. Our shuttle runs to meet the endowment schedule and our babysitting servcies provide an afforable and safe alternative for your family.</p>
     <h4>Colored paragraph example</h4>
