--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
           <li>Week 1: <a href="#">No Web Submission</a></li>
           <li>Week 2: <a href="site-plan.html">The Temple Inn Site Plan</a></li>
-          <li>Week 3: <a href="fixedhtml.html">Fixed html activity</a></li>
+          <li>Week 3: <a href="fixedhtml.html">Fixed html Activity</a></li>
           <li>Week 3: <a href="project/">Project</a></li>
         </ul>
       </main>
