--- a/site-plan.html
+++ b/site-plan.html
@@ -20,7 +20,7 @@
     <p>Templo workers, patrons and their families.</p>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <img src="images/logo.png" alt="Logo of the company" height="250 em"/>
+    <img src="images/logo.png" alt="Logo of the company" height="250"/>
     <hr />
     <h2>Style Guide</h2>
     <h3>Color Palette</h3>
@@ -43,14 +43,11 @@
     <h3>Typography</h3>
     <h4>Heading Font: Epilogue</h4>
     <p>Elegant font for heading <br>
-      <style>
-        @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@300&display=swap');
-        </style></p>
+        https://fonts.googleapis.com/css2?family=Epilogue:wght@300&display=swap</p>
     <h4>Paragraph Font: Hind Siliguri</h4>
     <p>Elegant font for paragraphs<br>
-      <style>
-        @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
-        </style></p>
+        https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap
+        </p>
     <h4>Normal paragraph example</h4>
     <p>We offer a complete package for whatever your needs are in relation to temple service and accomodations. Our shuttle runs to meet the endowment schedule and our babysitting servcies provide an afforable and safe alternative for your family.</p>
     <h4>Colored paragraph example</h4>
