--- a/project/index.html
+++ b/project/index.html
@@ -1,27 +1,66 @@
-<!DOCTYPE html>
-
+<!DOCTYPE html>  
 <html lang= "en-us">
     <head>
-
+        <meta charset= "utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="description" content= "The overall goal of the website project is to promote and provide information about the specialized services 
+        that this hotel chain offers to meet the needs of temple patrons who come to serve in the temple or who participate in events such as sealings, 
+        weddings, receptions, and youth trips. The website should reflect the Church culture and be designed to support a temple-oriented theme as well 
+        as the concept of being a haven of comfort and accessibility. The owner-operated company caters to temple workers, patrons, and their families 
+        by providing specialized services and accommodations that meet the needs of those patrons. The hotel accommodations and services are available 
+        to anyone willing to abide by the terms and policies outlined by the company. ">
+        <title>Temple Inn & Suites | Your Home Away From Home | 215-529-9999</title>
     </head>
     <body>
         <header>
+            <img src="../images/logo.png" alt="Logo of the company Temple Inn and Suites" height="100">
+            <h1>Temple Inn & Suites</h1>
             <nav>
                 <ul>
-                  <li><a href= "#">HOME</a></li>
+                  <li><a href= "#">Home</a></li>
                   <li><a href= "#">Amenities</a></li>
-                  <li><a href= "#">Temple</a></li>
-                  <li><a href= "#">...</a></li>   
+                  <li><a href= "#">Temple Spotlight</a></li>
+                  <li><a href= "#">Reservations</a></li>   
                 </ul>        
                 </nav>
         </header>
         <main>
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
+            <picture>
+                <img src="../images/heroimage.jpeg" alt="Temple of Rome, Italy" height="200">
+            </picture>
+            <section id="homeaway">
+                <h2>You Home Away from Home</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
+                    distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
+                    eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
                 <img src="http://placekitten.com/350/400" alt="">
             </section>
+            <section id="weddingreceptions">
+                <h2>Wedding Receptions</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
+                    distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
+                    eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
+                <img src="http://placekitten.com/350/400" alt="">
+            </section>
+            <section id="searchcenter">
+                <h2>Family Search Center</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
+                    distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
+                    eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
+            </section>
         </main>
-        <footer></footer>
+        <footer>
+            <p>Temple Inn & Suites Headquarters<br>
+            355 Wisconsin Avenue<br>
+            Bethesda, MD 20814<br>
+            215-829-9999<br>
+            info@templinn.com</p>
+            <img src="../images/facebook.png" alt="Facebook logo" height="30">
+            <img src="../images/instagram.png" alt="Instagram logo" height="30">
+            <img src="../images/youtube.png" alt="Youtube logo" height="30">
+            <p>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </p>
+
+        </footer>
 
 
     </body>
