--- a/project/index.html
+++ b/project/index.html
@@ -10,6 +10,7 @@
         by providing specialized services and accommodations that meet the needs of those patrons. The hotel accommodations and services are available 
         to anyone willing to abide by the terms and policies outlined by the company. ">
         <title>Temple Inn & Suites | Your Home Away From Home | 215-529-9999</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -17,34 +18,34 @@
             <h1>Temple Inn & Suites</h1>
             <nav>
                 <ul>
-                  <li><a href= "#">Home</a></li>
-                  <li><a href= "#">Amenities</a></li>
-                  <li><a href= "#">Temple Spotlight</a></li>
-                  <li><a href= "#">Reservations</a></li>   
+                  <li><a class="navlink" href= "#">Home</a></li>
+                  <li><a class="navlink" href= "#">Amenities</a></li>
+                  <li><a class="navlink" href= "#">Temple Spotlight</a></li>
+                  <li><a class="navlink" href= "#">Reservations</a></li>   
                 </ul>        
                 </nav>
         </header>
         <main>
             <picture>
-                <img src="../images/heroimage.jpeg" alt="Temple of Rome, Italy" height="200">
+                <img src="images/hero-image.jpg" alt="Temple of Fort Lauderdale Florida" width="960">
             </picture>
             <section id="homeaway">
-                <h2>You Home Away from Home</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
+                <h2 class="insection">You Home Away from Home</h2>
+                <p class="parsection">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
                 <img src="http://placekitten.com/350/400" alt="">
             </section>
             <section id="weddingreceptions">
-                <h2>Wedding Receptions</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
+                <h2 class="insection">Wedding Receptions</h2>
+                <p class="parsection">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
                 <img src="http://placekitten.com/350/400" alt="">
             </section>
             <section id="searchcenter">
-                <h2>Family Search Center</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
+                <h2 class="insection">Family Search Center</h2>
+                <p class="parsection"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
             </section>
@@ -55,9 +56,11 @@
             Bethesda, MD 20814<br>
             215-829-9999<br>
             info@templinn.com</p>
-            <img src="../images/facebook.png" alt="Facebook logo" height="30">
-            <img src="../images/instagram.png" alt="Instagram logo" height="30">
-            <img src="../images/youtube.png" alt="Youtube logo" height="30">
+            <div class="social">
+                <a href="http://facebook.com"><img src="images/facebook.png" alt="Facebook logo" height="30"></a>
+                <a href="http://instagram.com"><img src="images/instagram.png" alt="Instagram logo" height="30"></a>
+                <a href="http://youtube.com"><img src="images/youtube.png" alt="Facebook logo" height="30"></a>
+            </div>
             <p>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </p>
 
         </footer>
