--- a/project/index.html
+++ b/project/index.html
@@ -14,10 +14,14 @@
     </head>
     <body>
         <header>
-            <img src="../images/logo.png" alt="Logo of the company Temple Inn and Suites" height="100">
-            <h1>Temple Inn & Suites</h1>
+            <div class="logotitle">
+                <picture>
+                    <img src="../images/logo.png" alt="Logo of the company Temple Inn and Suites" height="100">
+                </picture>
+                <h1 class="title">Temple Inn & Suites</h1>
+            </div>
             <nav>
-                <ul>
+                <ul class="mainnavlink" >
                   <li><a class="navlink" href= "#">Home</a></li>
                   <li><a class="navlink" href= "#">Amenities</a></li>
                   <li><a class="navlink" href= "#">Temple Spotlight</a></li>
@@ -26,29 +30,35 @@
                 </nav>
         </header>
         <main>
-            <picture>
+            <picture class="picturemain">
                 <img src="images/hero-image.jpg" alt="Temple of Fort Lauderdale Florida" width="960">
             </picture>
-            <section id="homeaway">
-                <h2 class="insection">You Home Away from Home</h2>
-                <p class="parsection">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
+            <section class="homeaway">
+                <div class="divhomeaway">
+                    <h2 class="insection">You Home Away from Home</h2>
+                    <p class="homeparagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
+                </div>
+                <img class="imagehomeaway" src="http://placekitten.com/350/400" alt="">
+            </section>
+            <section class="weddingreceptions">
+                <div class="divwedding">
+                    <h2 class="insection">Wedding Receptions</h2>
+                    <p class="weddingparagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
+                    distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
+                    eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
+                </div>
                 <img src="http://placekitten.com/350/400" alt="">
             </section>
-            <section id="weddingreceptions">
-                <h2 class="insection">Wedding Receptions</h2>
-                <p class="parsection">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
-                    distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
-                    eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
-                <img src="http://placekitten.com/350/400" alt="">
-            </section>
-            <section id="searchcenter">
-                <h2 class="insection">Family Search Center</h2>
-                <p class="parsection"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
+            <section class="searchcenter">
+                <div class="divsearch">
+                    <h2 class="insection">Family Search Center</h2>
+                    <p class="searchparagraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
             </section>
+                </div>
         </main>
         <footer>
             <p>Temple Inn & Suites Headquarters<br>
