--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li>Week 3: <a href="fixedhtml.html">Fixed html Activity</a></li>
           <li>Week 3: <a href="project/">Project</a></li>
           <li>Week 4: <a href="project/">Project</a></li>
+          <li>Week 5: <a href="project/">Project: Fonts and Spacing</a></li>
         </ul>
       </main>
       <footer>
