--- a/project/index.html
+++ b/project/index.html
@@ -35,7 +35,7 @@
             </picture>
             <section class="homeaway">
                 <div class="divhomeaway">
-                    <h2 class="insection">You Home Away from Home</h2>
+                    <h2 class="insection">Your Home Away from Home</h2>
                     <p class="homeparagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
