--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li>Week 4: <a href="project/">Project</a></li>
           <li>Week 5: <a href="project/">Project: Fonts and Spacing</a></li>
           <li>Week 6: <a href="w6-exercise-1.html">CSS Layout Part 1</a></li>
+          <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
         </ul>
       </main>
       <footer>
