--- a/project/index.html
+++ b/project/index.html
@@ -5,10 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="description" content= "The overall goal of the website project is to promote and provide information about the specialized services 
         that this hotel chain offers to meet the needs of temple patrons who come to serve in the temple or who participate in events such as sealings, 
-        weddings, receptions, and youth trips. The website should reflect the Church culture and be designed to support a temple-oriented theme as well 
-        as the concept of being a haven of comfort and accessibility. The owner-operated company caters to temple workers, patrons, and their families 
-        by providing specialized services and accommodations that meet the needs of those patrons. The hotel accommodations and services are available 
-        to anyone willing to abide by the terms and policies outlined by the company. ">
+        weddings, receptions, and youth trips.">
         <title>Temple Inn & Suites | Your Home Away From Home | 215-529-9999</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -57,21 +54,25 @@
                     <p class="searchparagraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
+                </div>    
             </section>
-                </div>
+                
         </main>
         <footer>
-            <p>Temple Inn & Suites Headquarters<br>
-            355 Wisconsin Avenue<br>
-            Bethesda, MD 20814<br>
-            215-829-9999<br>
-            info@templinn.com</p>
-            <div class="social">
-                <a href="http://facebook.com"><img src="images/facebook.png" alt="Facebook logo" height="30"></a>
-                <a href="http://instagram.com"><img src="images/instagram.png" alt="Instagram logo" height="30"></a>
-                <a href="http://youtube.com"><img src="images/youtube.png" alt="Facebook logo" height="30"></a>
+            <div class="contactinfo">
+                <p class="address"><strong>Inn & Suites Headquarters<br>
+                    355 Wisconsin Avenue<br>
+                    Bethesda, MD 20814<br>
+                    215-829-9999<br>
+                    info@templinn.com</strong></p>
+                    <div class="social">
+                        <a href="http://facebook.com" clas="facebook"><img src="images/facebook.png" alt="Facebook logo" height="50"></a>
+                        <a href="http://instagram.com" class="instagram"><img src="images/instagram.png" alt="Instagram logo" height="50"></a>
+                        <a href="http://youtube.com" class="youtube"><img src="images/youtube.png" alt="Youtube logo" height="60"></a>
+                    </div>
             </div>
-            <p>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </p>
+            
+            <p><strong>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </strong></p>
 
         </footer>
 
