week 7 update 3d effect

--- a/project/index.html
+++ b/project/index.html
@@ -37,7 +37,7 @@
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
                 </div>
-                <img class="imagehomeaway" src="http://placekitten.com/350/400" alt="">
+                <img class="imagehomeaway" src="http://placekitten.com/350/400" alt="" width="250">
             </section>
             <section class="weddingreceptions">
                 <div class="divwedding">
@@ -46,7 +46,7 @@
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
                 </div>
-                <img src="http://placekitten.com/350/400" alt="">
+                <img class="imagewedding" src="http://placekitten.com/350/400" alt="" width="250">
             </section>
             <section class="searchcenter">
                 <div class="divsearch">
@@ -82,7 +82,7 @@
                     <a href="http://youtube.com" class="youtube"><img src="images/youtube.png" alt="Youtube logo" height="60"></a>
                 </div></div>
                 
-            <p><strong>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </strong></p>
+            <p class="copy"><strong>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </strong></p>
 
         </footer>
 
