--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,7 @@
         that this hotel chain offers to meet the needs of temple patrons who come to serve in the temple or who participate in events such as sealings, 
         weddings, receptions, and youth trips.">
         <title>Temple Inn & Suites | Your Home Away From Home | 215-529-9999</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
@@ -37,16 +37,16 @@
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
                 </div>
-                <img class="imagehomeaway" src="http://placekitten.com/350/400" alt="" width="250">
+                <img class="imagehomeaway" src="images/homeaway.jpeg" alt="family in the temple" height="250">
             </section>
-            <section class="weddingreceptions">
+            <section class="weddingreceptions">     
                 <div class="divwedding">
                     <h2 class="insection">Wedding Receptions</h2>
                     <p class="weddingparagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
                 </div>
-                <img class="imagewedding" src="http://placekitten.com/350/400" alt="" width="250">
+                <img class="imagewedding" src="images/wedding.jpg" alt="" height="250">
             </section>
             <section class="searchcenter">
                 <div class="divsearch">
