--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li>Week 5: <a href="project/">Project: Fonts and Spacing</a></li>
           <li>Week 6: <a href="w6-exercise-1.html">CSS Layout Part 1</a></li>
           <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
+          <li>Week 7: <a href="project/">Project: Finish the project home page</a></li>
         </ul>
       </main>
       <footer>
