--- a/project/index.html
+++ b/project/index.html
@@ -27,9 +27,17 @@
                 </nav>
         </header>
         <main>
-            <picture class="picturemain">
-                <img src="images/hero-image.jpg" alt="Temple of Fort Lauderdale Florida" width="960">
-            </picture>
+            <section class="calltoaction">
+                <div class="banner-box">
+                    <img class="banner" src="images/hero-image.jpg" alt="Temple of Fort Lauderdale Florida" width="960">
+                    <div class="action">
+                        <h3>
+                            Plan your next adventure with us!
+                        </h3>
+                        <button>Contact Us</button>
+                    </div>
+                </div>
+            </section>     
             <section class="homeaway">
                 <div class="divhomeaway">
                     <h2 class="insection">Your Home Away from Home</h2>
@@ -64,9 +72,9 @@
                 215-829-9999<br>
                 info@templinn.com</strong></p>
                 <div class="social">
-                    <a href="http://facebook.com" clas="facebook"><img src="images/facebook.png" alt="Facebook logo" height="50"></a>
-                    <a href="http://instagram.com" class="instagram"><img src="images/instagram.png" alt="Instagram logo" height="50"></a>
-                    <a href="http://youtube.com" class="youtube"><img src="images/youtube.png" alt="Youtube logo" height="60"></a>
+                    <a href="http://facebook.com" clas="facebook"><img src="images/icons8-facebook-64 (2).png" alt="Facebook logo" height="50"></a>
+                    <a href="http://instagram.com" class="instagram"><img src="images/icons8-instagram-64 (2).png" alt="Instagram logo" height="50"></a>
+                    <a href="http://youtube.com" class="youtube"><img src="images/icons8-youtube-squared-64.png" alt="Youtube logo" height="50"></a>
                 </div></div>
                 
             <p class="copy"><strong>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </strong></p>
