week 8 contrast color

--- a/project/index.html
+++ b/project/index.html
@@ -29,11 +29,14 @@
         <main>
             <section class="calltoaction">
                 <div class="banner-box">
-                    <img class="banner" src="images/hero-image.jpg" alt="Temple of Fort Lauderdale Florida" width="960">
+                    <img class="banner" src="images/hero-image.jpg" alt="Temple of Fort Lauderdale Florida" >
                     <div class="action">
                         <h3>
-                            Plan your next adventure with us!
+                            Plan your next 
+                            <br>
+                            adventure with us!
                         </h3>
+                        
                         <button>Contact Us</button>
                     </div>
                 </div>
@@ -62,7 +65,8 @@
                     <p class="searchparagraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit, possimus nostrum ipsam amet, provident, magnam assumenda aperiam 
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
-                </div>         
+                </div>   
+                </section>      
         </main>
         <footer>
             <div class="contact">
@@ -72,9 +76,9 @@
                 215-829-9999<br>
                 info@templinn.com</strong></p>
                 <div class="social">
-                    <a href="http://facebook.com" clas="facebook"><img src="images/icons8-facebook-64 (2).png" alt="Facebook logo" height="50"></a>
-                    <a href="http://instagram.com" class="instagram"><img src="images/icons8-instagram-64 (2).png" alt="Instagram logo" height="50"></a>
-                    <a href="http://youtube.com" class="youtube"><img src="images/icons8-youtube-squared-64.png" alt="Youtube logo" height="50"></a>
+                    <a href="http://facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
+                    <a href="http://instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
+                    <a href="http://youtube.com" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
                 </div></div>
                 
             <p class="copy"><strong>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </strong></p>
