--- a/project/index.html
+++ b/project/index.html
@@ -48,7 +48,7 @@
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
                 </div>
-                <img class="imagehomeaway" src="images/homeaway.jpeg" alt="family in the temple" height="250">
+                <img class="imagehomeaway" src="images/family.jpg" alt="family in the temple" width="300">
             </section>
             <section class="weddingreceptions">     
                 <div class="divwedding">
@@ -57,7 +57,7 @@
                     distinctio hic nisi sint neque minus eaque recusandae nihil tempore. Quo error, aliquam perferendis ea tempore deleniti sunt quas 
                     eveniet maxime eos incidunt molestiae natus iste quod aspernatur iure ipsa amet facere!</p>
                 </div>
-                <img class="imagewedding" src="images/wedding.jpg" alt="" height="250">
+                <img class="imagewedding" src="images/weddingtwo.jpg" alt="" width="300">
             </section>
             <section class="searchcenter">
                 <div class="divsearch">
