--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li>Week 6: <a href="w6-exercise-1.html">CSS Layout Part 1</a></li>
           <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
           <li>Week 7: <a href="project/">Project: Finish the project home page</a></li>
+          <li>Week 9: <a href="firstform.html">Assignment HTML Forms</a></li>
         </ul>
       </main>
       <footer>
