--- a/firstform.html
+++ b/firstform.html
@@ -43,6 +43,15 @@ textarea {
 
   /* Match form field borders */
   border: 1px solid #999;
+
+}
+
+input[type="text" i] {
+    padding: .5rem
+}
+
+input[type="email" i] {
+    padding: .5rem
 }
 
 input:focus, 
@@ -57,6 +66,8 @@ textarea {
 
   /* Provide space to type some text */
   height: 5em;
+
+  padding: .5rem;
 }
 
 .button {
