added the final site plan

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
           <li>Week 7: <a href="project/">Project: Finish the project home page</a></li>
           <li>Week 9: <a href="firstform.html">Assignment HTML Forms</a></li>
+          <li>Week 9: <a href="final-site-plan.html">Final: Start the Site Plan</a></li>
         </ul>
       </main>
       <footer>
