--- a/final-site-plan.html
+++ b/final-site-plan.html
@@ -4,24 +4,24 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Temple Inn & Suites Site Plan</title>
-  <link rel="stylesheet" href="css/site-plan.css">
+  <title>Baby Yoda 123</title>
+  <link rel="stylesheet" href="css/final-site-plan.css">
 </head>
 
 <body>
   <header>
-    <h1>Temple Inn & Suites Site Plan</h1>
+    <h1>Baby Yoda 123</h1>
     <div class="signature">Nayade De La Cruz</div>
   </header>
   <main>
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To provide specialized hotel accommodations services and accommodations that meet the needs of those patrons. </p>
+    <p>To provide specialized babysitting services that meets the needs of every parent and child </p>
     <h3>Audience</h3>
-    <p>Templo workers, patrons and their families.</p>
+    <p>Parents, caregivers, babysitters</p>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <img src="images/logo.png" alt="Logo of the company" height="250"/>
+    <img src="images/baby-yoda-logo.png" alt="Logo of the company with a baby Yoda" height="250"/>
     <hr />
     <h2>Style Guide</h2>
     <h3>Color Palette</h3>
@@ -35,16 +35,16 @@
         <th>Accent 2</th>
       </tr>
       <tr>
-        <td class="primary">#8E9DCC</td>
-        <td class="secondary">#5e67a1</td>
+        <td class="primary">#042698</td>
+        <td class="secondary">#057EE6</td>
         <td class="accent1">#FEF9FF</td>
         <td class="accent2">#D9DBF1</td>
       </tr>
     </table>
     <h3>Typography</h3>
     <h4>Heading Font: Epilogue</h4>
-    <p>Elegant font for heading <br>
-        https://fonts.googleapis.com/css2?family=Epilogue:wght@300&display=swap</p>
+    <p>Bold font for heading <br>
+        https://fonts.google.com/specimen/Fredoka+One?sidebar.open=true&selection.family=Fredoka+One</p>
     <h4>Paragraph Font: Hind Siliguri</h4>
     <p>Elegant font for paragraphs<br>
         https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap
@@ -65,7 +65,7 @@
     <h3>Site Map</h3>
     <p>Coming soon ...</p>
     <h3>Wireframes</h3>
-    <p><img src= "images/wireframe-large-templeinn&suites.png" alt="Temple Inn Large Wireframe" /></p>
+    <p><img src= "images/wireframeyoda.png" alt="Temple Inn Large Wireframe" /></p>
   </main>
   <footer>Nayade De La Cruz | BYU-Idaho | WDD 130 - Web Fundamentals</footer>
 </body>
