--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li>Week 7: <a href="project/">Project: Finish the project home page</a></li>
           <li>Week 9: <a href="firstform.html">Assignment HTML Forms</a></li>
           <li>Week 9: <a href="final-site-plan.html">Final: Start the Site Plan</a></li>
+          <li>Week 10: <a href="project/">Assignment: Project Site Completition</a></li>
         </ul>
       </main>
       <footer>
