--- a/project/amenities.html
+++ b/project/amenities.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset= "utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta name="description" content= "The overall goal of the website project is to promote and provide information about the specialized services 
+        <meta name="description" content= "The goal of the website project is to promote and provide information about the specialized services 
         that this hotel chain offers to meet the needs of temple patrons who come to serve in the temple or who participate in events such as sealings, 
         weddings, receptions, and youth trips.">
         <title>Temple Inn & Suites | Your Home Away From Home | 215-529-9999</title>
@@ -28,11 +28,11 @@
         </header>
         <main class="mainamenities">
             <section class="secfree">
-                <h1 class="freeamenities">FREE AMENITIES</h1>
+                <h2 class="freeamenities">FREE AMENITIES</h2>
             </section>     
             <section class="breakfast">
                 <div class="divbreakfast">
-                    <h2 class="titlebreakfast">Breakfast</h2>
+                    <h3 class="titlebreakfast">Breakfast</h3>
                     <p class="pbreakfast">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus molestias pariatur 
                         provident facere quasi ad, est a error doloremque exercitationem?</p>
                 </div>
@@ -40,7 +40,7 @@
             </section>
             <section class="parking">
                 <div class="divparking">
-                    <h2 class="titleparking">Parking</h2>
+                    <h3 class="titleparking">Parking</h3>
                     <p class="pparking">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus molestias pariatur 
                         provident facere quasi ad, est a error doloremque exercitationem?</p>
                 </div>
@@ -48,7 +48,7 @@
             </section>
             <section class="workout">
                 <div class="divworkout">
-                    <h2 class="titleworkout">Workout Room</h2>
+                    <h3 class="titleworkout">Workout Room</h3>
                     <p class="pworkout">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus molestias pariatur 
                         provident facere quasi ad, est a error doloremque exercitationem?</p>
                 </div>
@@ -56,7 +56,7 @@
             </section>
             <section class="shuttle">
                 <div class="divshuttle">
-                    <h2 class="titleshuttle">Temple Shuttle</h2>
+                    <h3 class="titleshuttle">Temple Shuttle</h3>
                     <p class="pshuttle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus molestias pariatur 
                         provident facere quasi ad, est a error doloremque exercitationem?</p>
                 </div>
@@ -64,7 +64,7 @@
             </section>
             <section class="pool">
                 <div class="divpool">
-                    <h2 class="titlepool">Indoor Pool</h2>
+                    <h3 class="titlepool">Indoor Pool</h3>
                     <p class="ppool">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus molestias pariatur 
                         provident facere quasi ad, est a error doloremque exercitationem?</p>
                 </div>
@@ -72,7 +72,7 @@
             </section>
             <section class="familyhistory"> 
                 <div class="divfamilyhistory">
-                    <h2 class="titlefamilyhistory">Family History Services</h2>
+                    <h3 class="titlefamilyhistory">Family History Services</h3>
                     <p class="pfamilyhistory">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus molestias pariatur 
                         provident facere quasi ad, est a error doloremque exercitationem?</p>
                 </div>
@@ -80,7 +80,7 @@
             </section>
             <section class="wifi">
                 <div class="divwifi">
-                    <h2 class="titlewifi">Wifi</h2>
+                    <h3 class="titlewifi">Wifi</h3>
                     <p class="pwifi">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus molestias pariatur 
                         provident facere quasi ad, est a error doloremque exercitationem?</p>
                 </div>
@@ -95,9 +95,9 @@
                 215-829-9999<br>
                 info@templinn.com</strong></p>
                 <div class="social">
-                    <a href="http://facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
-                    <a href="http://instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
-                    <a href="http://youtube.com" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
+                    <a href="http://www.facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
+                    <a href="http://www.instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
+                    <a href="http://www.youtube.com" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
                 </div></div>
                 
             <p class="copy"><strong>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </strong></p>
