--- a/project/index.html
+++ b/project/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset= "utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta name="description" content= "The overall goal of the website project is to promote and provide information about the specialized services 
+        <meta name="description" content= "The goal of the website project is to promote and provide information about the specialized services 
         that this hotel chain offers to meet the needs of temple patrons who come to serve in the temple or who participate in events such as sealings, 
         weddings, receptions, and youth trips.">
         <title>Temple Inn & Suites | Your Home Away From Home | 215-529-9999</title>
@@ -76,9 +76,9 @@
                 215-829-9999<br>
                 info@templinn.com</strong></p>
                 <div class="social">
-                    <a href="http://facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
-                    <a href="http://instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
-                    <a href="http://youtube.com" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
+                    <a href="http://www.facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
+                    <a href="http://www.instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
+                    <a href="https://www.youtube.com/" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
                 </div></div>
                 
             <p class="copy"><strong>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </strong></p>
