--- a/project/amenities.html
+++ b/project/amenities.html
@@ -95,9 +95,9 @@
                 215-829-9999<br>
                 info@templinn.com</strong></p>
                 <div class="social">
-                    <a href="http://www.facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
-                    <a href="http://www.instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
-                    <a href="http://www.youtube.com" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
+                    <a href="https://www.facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
+                    <a href="https://www.instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
+                    <a href="https://www.youtube.com" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
                 </div></div>
                 
             <p class="copy"><strong>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </strong></p>
