--- a/project/index.html
+++ b/project/index.html
@@ -76,8 +76,8 @@
                 215-829-9999<br>
                 info@templinn.com</strong></p>
                 <div class="social">
-                    <a href="http://www.facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
-                    <a href="http://www.instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
+                    <a href="https://www.facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
+                    <a href="https://www.instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
                     <a href="https://www.youtube.com/" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
                 </div></div>
                 
