--- a/project/spotlight.html
+++ b/project/spotlight.html
@@ -81,9 +81,9 @@
                 215-829-9999<br>
                 info@templinn.com</strong></p>
                 <div class="social">
-                    <a href="www.http://facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
-                    <a href="www.http://instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
-                    <a href="www.http://youtube.com" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
+                    <a href="www.https://facebook.com" class="facebook"><img src="images/facebookicon.png" alt="Facebook logo" height="50"></a>
+                    <a href="www.https://instagram.com" class="instagram"><img src="images/instagramicon.png" alt="Instagram logo" height="50"></a>
+                    <a href="www.https://youtube.com" class="youtube"><img src="images/youtubeicon.png" alt="Youtube logo" height="50"></a>
                 </div></div>
                 
             <p class="copy"><strong>Copyright &copy; 2020 Temple Inn & Suites | All rights Reserved | Privacy and Cookie Statement | Nayade De la cruz </strong></p>
