--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li>Week 9: <a href="firstform.html">Assignment HTML Forms</a></li>
           <li>Week 9: <a href="final-site-plan.html">Final: Start the Site Plan</a></li>
           <li>Week 10: <a href="project/">Assignment: Project Site Completition</a></li>
+          <li>Week 11: <a href="final-site-plan.html">Final: Finish the Site Plan</a></li>
         </ul>
       </main>
       <footer>
