--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li>Week 9: <a href="final-site-plan.html">Final: Start the Site Plan</a></li>
           <li>Week 10: <a href="project/">Assignment: Project Site Completition</a></li>
           <li>Week 11: <a href="final-site-plan.html">Final: Finish the Site Plan</a></li>
+          <li>Week 12: <a href="card.html">Activity: A Media Card Component</a></li>
         </ul>
       </main>
       <footer>
