--- a/final-project/babysitter.html
+++ b/final-project/babysitter.html
@@ -14,20 +14,23 @@
                 <picture>
                     <img src="images/baby_yoda.png" alt="Logo of the company Baby Yoda 123" height="100">
                 </picture>
-                <h1>BABY YODA</h1>
+                <h1>BABY YODA 123</h1>
             </div>
             <nav>
                 <ul class="mainnav">
                     <li class="navlink"><a href="index.html">HOME</a></li>
                     <li class="navlink"><a href="babysitter.html">FIND A BABYSITTER</a></li>
-                    <li class="navlink"><a href="moreinfo.html">INFO</a></li>
+                    <li class="navlink"><a href="reviews.html">REVIEWS</a></li>
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="babysitter">
             <section>
                 <form class="babysitter" method="post" action="babyyodaform">
-                    <h3>Find a Babysitter</h3>
+                    <div class="headerform">
+                        <h3 class="titlebabysitter">Find a Babysitter</h3>
+                        <img class="findbaby" src="images/findbaby.jpeg" alt="mom leaving her baby with a babysitter">
+                    </div>    
                     <fieldset>
                         <legend>Period of Time <em>(Choose one)</em></legend>
                         <div class= "radio">
@@ -134,7 +137,7 @@
                 <a href="https://www.instagram.com" class="instagram"><img class="icon" src="images/instagram.png" alt="Instagram logo"></a>
                 <a href="https://www.youtube.com/" class="youtube"><img class="icon" src="images/youtube.png" alt="Youtube logo"></a>
             </div>
-
+            <a class="finalsite" href="../final-site-plan.html">Site Plan | Baby Yoda | Cira Nayade De la Cruz</a>
         </footer>
 
     </body>
