--- a/final-project/index.html
+++ b/final-project/index.html
@@ -14,20 +14,19 @@
                 <picture>
                     <img src="images/baby_yoda.png" alt="Logo of the company Baby Yoda 123" height="100">
                 </picture>
-                <h1>BABY YODA</h1>
+                <h1>BABY YODA 123</h1>
             </div>
             <nav>
                 <ul class="mainnav">
                     <li class="navlink"><a href="index.html">HOME</a></li>
                     <li class="navlink"><a href="babysitter.html">FIND A BABYSITTER</a></li>
-                    <li class="navlink"><a href="moreinfo.html">INFO</a></li>
+                    <li class="navlink"><a href="reviews.html">REVIEWS</a></li>
                 </ul>
             </nav>
         </header>
         <main class="home">
             <section class="banner">
-                <h2 class="welcome">WELCOME!</h2>
-                <img class="heroimage" src="images/heroimage.jpg" width="960">
+                <img class="heroimage" src="images/babysitterhero.png" width="960">
             </section>
             <section class="about">
                 <h3>About Us</h3>
@@ -90,7 +89,7 @@
                 </form>
             </section>
             <section class="testimonial">
-                <img class="imgtestimony" src="http://placekitten.com/50/50">
+                <img class="imgtestimony" src="images/testimonial.jpeg">
                 <p class="mainp">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Asperiores sapiente at recusandae nihil unde, dignissimos
                      laudantium commodi? Ipsam, voluptatibus voluptas!</p>
@@ -109,6 +108,7 @@
                 <a href="https://www.instagram.com" class="instagram"><img class="icon" src="images/instagram.png" alt="Instagram logo"></a>
                 <a href="https://www.youtube.com/" class="youtube"><img class="icon" src="images/youtube.png" alt="Youtube logo"></a>
             </div>
+            <a class="finalsite" href="../final-site-plan.html">Site Plan | Baby Yoda | Cira Nayade De la Cruz</a>
 
         </footer>
 
