--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <li>Week 10: <a href="project/">Assignment: Project Site Completition</a></li>
           <li>Week 11: <a href="final-site-plan.html">Final: Finish the Site Plan</a></li>
           <li>Week 12: <a href="card.html">Activity: A Media Card Component</a></li>
+          <li>Week 13: <a href="final-project/index.html">Final Project Review</a></li>
+
         </ul>
       </main>
       <footer>
